v22
 # Course section 22: Dear ImGui
    + Implemented ImGui
    + Added ImGui debug mode by pressing F1 that can be used to spawn
      new enemies
    (section completed)

v21
 # Course section 21: Displaying True-Type Fonts
    + Added font support to the AssetStore
    + Added text label component and text rendering system
    + Added text/ui to show health of entities
    (section completed)

v20
 # Course section 19: Tagging & Grouping Entities
    + Implemented system for adding tags and groups (for entities)
    + Added projectile damage to player/enemies
    (section completed)
 # Course section 20: Data-Oriented Design
    + Made changes to the way Pools work to avoid data gaps
      and have packed pools of components
    (section completed)

v19
 # Course section 18: Other Useful Components & Systems
    + Added KeyboardControlSystem and KeyboardControlledComponent
      to control entities with the keyboard
    + Added camera follow system with corresponding component
    + Added projectile emitter component and projectile emit system
    + Added health component
    + Added system to kill projectile when the lifetime ends
    + Implemented shooting projectiles with space (for the player)
    (section completed)

v18
 # Course section 17: Event System
    + Added an event system using the publisher-subscriber design pattern
    (section completed)

v17
 # Course section 16: Killing Entities
    + Implemented functionality to remove entities
    (section completed)

v16
 # Course section 15: Collision System
    + Added BoxColliderComponent, CollisionSystem and RenderColliderSystem
      for collision detection and debug rendering of the collision boxes
    (section completed)

v15
  # Course section 14: Animation System
    + Added AnimationComponent and Animationsystem for animation sprites
    (section completed)

v14
  # Course section 13: Managing Assets
    + Added z-index to the SpriteComponent and sorting of sprites