@@ -4,12 +4,49 @@
 #include "../ECS/ECS.h"
 #include "../Components/TransformComponent.h"
 #include "../Components/RigidBodyComponent.h"
+#include "../Components/SpriteComponent.h"
+
+#include "../EventBus/EventBus.h"
+#include "../Events/CollisionEvent.h"
 
 class MovementSystem: public System {
     public:
         MovementSystem() {
             RequireComponent<TransformComponent>();
             RequireComponent<RigidBodyComponent>();
+        }
+
+        void SubscribeToEvents(std::unique_ptr<EventBus>& eventBus) {
+            eventBus->SubscribeToEvent<CollisionEvent>(this, &MovementSystem::onCollision);
+        }
+
+
+        void onCollision(CollisionEvent& event) {
+            Entity a = event.a;
+            Entity b = event.b;
+            Logger::Log("The Movement system reveived an event collision between entities " + std::to_string(a.GetId()) + " and " + std::to_string(b.GetId()));
+
+            if (a.BelongsToGroup("enemies") && b.BelongsToGroup("obstacles")) {
+                OnEnemyHitsObstacle(a, b);
+            } 
+            else if (a.BelongsToGroup("obstacles") && b.BelongsToGroup("enemies")) {
+                OnEnemyHitsObstacle(b, a);
+            }
+        }
+
+        void OnEnemyHitsObstacle(Entity enemy, Entity obstacle) {
+            if (enemy.HasComponent<RigidBodyComponent>() && enemy.HasComponent<SpriteComponent>()) {
+                auto& rigidbody = enemy.GetComponent<RigidBodyComponent>();
+                auto& sprite = enemy.GetComponent<SpriteComponent>();
+                if (rigidbody.velocity.x != 0) {
+                    rigidbody.velocity.x *= -1;
+                    sprite.flip = (sprite.flip == SDL_FLIP_NONE) ? SDL_FLIP_HORIZONTAL : SDL_FLIP_NONE;
+                }
+                if (rigidbody.velocity.y != 0) {
+                    rigidbody.velocity.y *= -1;
+                    sprite.flip = (sprite.flip == SDL_FLIP_NONE) ? SDL_FLIP_VERTICAL : SDL_FLIP_NONE;
+                }
+            }
         }
 
         void Update(double deltaTime) {
@@ -21,6 +58,28 @@ class MovementSystem: public System {
                 
                 transform.position.x += rigidbody.velocity.x * deltaTime;
                 transform.position.y += rigidbody.velocity.y * deltaTime;
+
+                int margin = 100;
+
+                bool isEntityOutsideMap = (
+                        transform.position.x < -margin ||
+                        transform.position.x > Game::mapWidth + margin ||
+                        transform.position.y < -margin ||
+                        transform.position.y > Game::mapHeight + margin
+                );
+
+                // Kill all entities that move outside the map boundaries
+                if (isEntityOutsideMap && !entity.HasTag("player")) {
+                    entity.Kill();
+                }
+
+                // Prevent player from moving outside the map
+                if (entity.HasTag("player")) {
+                    if (transform.position.x < 0) { transform.position.x = 0; }
+                    else if (transform.position.x > Game::mapWidth) { transform.position.x = Game::mapWidth; }
+                    if (transform.position.y < 0) { transform.position.y = 0; }
+                    else if (transform.position.y > Game::mapHeight) { transform.position.y = Game::mapHeight; }
+                }
             }
         }
 };
