@@ -26,6 +26,17 @@ class RenderSystem: public System {
                 RenderableEntity renderableEntity;
                 renderableEntity.spriteComponent = entity.GetComponent<SpriteComponent>();
                 renderableEntity.transformComponent = entity.GetComponent<TransformComponent>();
+                
+                // Bypass rendering entities if they are outside the camera viev
+                bool isEntityOutsideCameraView = (
+                    renderableEntity.transformComponent.position.x + (renderableEntity.transformComponent.scale.x * renderableEntity.spriteComponent.width) < camera.x ||
+                    renderableEntity.transformComponent.position.x > camera.x + camera.w ||
+                    renderableEntity.transformComponent.position.y + (renderableEntity.transformComponent.scale.y * renderableEntity.spriteComponent.height) < camera.y ||
+                    renderableEntity.transformComponent.position.y > camera.y + camera.h
+                );
+                if (isEntityOutsideCameraView && !renderableEntity.spriteComponent.isFixed) {
+                    continue;
+                }
                 renderableEntities.emplace_back(renderableEntity);
             }
 
@@ -57,7 +68,7 @@ class RenderSystem: public System {
                         &dstRect,
                         transform.rotation,
                         NULL,
-                        SDL_FLIP_NONE
+                        sprite.flip
                         );
             }
         }
